# FlagGems

benchmark/: test_hadamard_transform.py  test_masked_scatter_backward.py  test_unsafe_index_put.py
conf/: operators.yaml
cpp/: pyproject.toml
cpp/csrc/: cstub.cpp
cpp/include/: operators.h
cpp/lib/: CMakeLists.txt  unsafe_index_put.cpp  unsafe_index_put_kernel.py  utils.cpp
src/flag_gems/: __init__.py
src/flag_gems/ops/: __init__.py  _unsafe_index_put.py  masked_scatter_backward.py
tests/: test_hadamard_transform.py  test_masked_scatter_backward.py  test_unsafe_index_put.py
triton_src/: unsafe_index_put_kernel.py
