# Copyright 2026 FlagOS Contributors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
# cmake and ninja are intentionally omitted here; for --no-build-isolation
# builds they must already be present in the venv (cmake>=3.20,<4.0, ninja).
requires = ["scikit-build-core==0.12.2", "pybind11==3.0.3", "setuptools-scm>=8"]

build-backend = "scikit_build_core.build"

[project]

# The vendor suffix is injected at build time (see tools/set_cpp_vendor.sh and
# setup.sh): __VENDOR__ is replaced with cuda / musa / npu / gcu / ix so that
# each backend produces its own distribution, e.g. flag-gems-cpp-cuda.
name = "flag-gems-cpp-cuda"

dynamic = ["version"]

description = "FlagGems C++ wrapped operators (native extension)."
requires-python = ">=3.10.0"
license = { text = "Apache Software License" }

# The native package drops its .so files into the flag_gems/ namespace, so it
# must be paired with the exact same version of the pure-Python main package.
# torch is pinned to a compatible family at build/release time.
dependencies = [
    "flag-gems",
]

[tool.scikit-build]

build.verbose = true
logging.level = "INFO"
# Install the extension modules under the flag_gems/ package namespace.
wheel.install-dir = "flag_gems"
build-dir = "build/{cache_tag}"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.scikit-build.cmake.define]
FLAGGEMS_BUILD_C_EXTENSIONS = "ON"

[tool.setuptools_scm]
# Version is derived from the parent repository so the native package stays in
# lockstep with the main flag-gems package (same commit, same version).
root = ".."
version_scheme = "no-guess-dev"
